[gd_scene load_steps=9 format=2]

[ext_resource path="res://Items/PowerStar.gd" type="Script" id=1]
[ext_resource path="res://Items/gfx/star0.png" type="Texture" id=2]
[ext_resource path="res://Items/gfx/star1.png" type="Texture" id=3]
[ext_resource path="res://Items/gfx/star2.png" type="Texture" id=4]
[ext_resource path="res://Items/gfx/star3.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[node name="PowerStar" type="KinematicBody2D"]
position = Vector2( 8, 8 )
collision_layer = 4
collision_mask = 69
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="StarSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Area2DCollision" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 0.7, 0.8 )
shape = SubResource( 2 )

[node name="KinematicBodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 0.6, 0.7 )
shape = SubResource( 3 )

[node name="DropSpawnTimer" type="Timer" parent="."]
wait_time = 1.1
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DropSpawnTimer" to="." method="_on_DropSpawnTimer_timeout"]
